Fixed contrast for report header date

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -142,7 +142,8 @@ a:focus,
 .workbench-card-sidebar-tab,
 ::placeholder,
 .rr-splash-description,
-.search-export .instruction h4 {
+.search-export .instruction h4,
+.report-print-date {
     color: #000 !important;
 }
 
